# cpp_code_generator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
cli/: CMakeLists.txt  main.cpp
cpp_code_generator/: CMakeLists.txt  ast_processor.cpp  ast_processor.hpp  ast_type.hpp  code_generator.cpp  code_generator.hpp  compile_file.cpp  compile_file.hpp  compiler_output.hpp  error.hpp  file_extension.hpp  hashed_string_containers.hpp  member.hpp  module.hpp  named_array.hpp  parser.cpp  parser.hpp  parser_output.hpp  result_macros.hpp  scanner.cpp  scanner.hpp  string_hasher.hpp  tagged_union.hpp  token.hpp  token_type.hpp  token_types.hpp  tokens.hpp  tokens.txt  type_expr.hpp  types.hpp
readmegen/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  file_test.cpp  file_test.hpp  gtest_printing.cpp  gtest_printing.hpp  misc.cpp  misc.hpp  test_files.cpp  test_input.cppg  test_named_array.cpp  test_no_fail.cpp  test_no_fail.hpp  test_passing_file.cpp  test_passing_file.hpp  testf_file_test.cpp  testf_file_test.hpp  testp_no_fail.cpp  testp_no_fail.hpp  testp_passing_file.cpp  testp_passing_file.hpp
